[package]
name = "capsolver"
version = "0.4.2"
edition = "2021"
description = "CapSolver API SDK for rust"
readme = "README.md"
repository = "https://github.com/IrisDAnte/capsolver/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwestplus = { git = "https://github.com/shrimpyuk/reqwestplus", branch = "master" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
